# biased-die

./: .gitignore  CMakeLists.txt  README.md  biased_cube_nz.stl  biased_dice.stl
assets/: biased_cube_nz.stl  biased_dice.stl  biased_dice_1_w1.stl  cube.ply
legacy/: bias_dice_Centroid_Vector_Projection.py  simple_cube_example.py
output/: biased_dice.stl
src/: bias_dice_try_1.py  bias_dice_try_1_backup.py  bias_dice_try_2.py  connectivity.py  density_optimizer.cpp  density_optimizer.h  dice_designer_cli.py  dice_designer_gui.py  final_optimization.py  main.cpp  main.py  mesh_generation.py  octahedron.h  optimization.py  optimization2.py  optimization3.py  optimization5.py  overhang.py  probability_models.py  visualization.py  visualizer.py
